; ModuleID = '/home/carl/AnghaBench/git/extr_diff.c_find_lno.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff.c_find_lno.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.emit_callback = type { i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.emit_callback*)* @find_lno to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @find_lno(i8* %0, %struct.emit_callback* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.emit_callback*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.emit_callback* %1, %struct.emit_callback** %4, align 8
  %6 = load %struct.emit_callback*, %struct.emit_callback** %4, align 8
  %7 = getelementptr inbounds %struct.emit_callback, %struct.emit_callback* %6, i32 0, i32 1
  store i8* null, i8** %7, align 8
  %8 = load %struct.emit_callback*, %struct.emit_callback** %4, align 8
  %9 = getelementptr inbounds %struct.emit_callback, %struct.emit_callback* %8, i32 0, i32 0
  store i8* null, i8** %9, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = call i8* @strchr(i8* %10, i8 signext 45)
  store i8* %11, i8** %5, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %2
  br label %32

15:                                               ; preds = %2
  %16 = load i8*, i8** %5, align 8
  %17 = getelementptr inbounds i8, i8* %16, i64 1
  %18 = call i8* @strtol(i8* %17, i32* null, i32 10)
  %19 = load %struct.emit_callback*, %struct.emit_callback** %4, align 8
  %20 = getelementptr inbounds %struct.emit_callback, %struct.emit_callback* %19, i32 0, i32 1
  store i8* %18, i8** %20, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = call i8* @strchr(i8* %21, i8 signext 43)
  store i8* %22, i8** %5, align 8
  %23 = load i8*, i8** %5, align 8
  %24 = icmp ne i8* %23, null
  br i1 %24, label %26, label %25

25:                                               ; preds = %15
  br label %32

26:                                               ; preds = %15
  %27 = load i8*, i8** %5, align 8
  %28 = getelementptr inbounds i8, i8* %27, i64 1
  %29 = call i8* @strtol(i8* %28, i32* null, i32 10)
  %30 = load %struct.emit_callback*, %struct.emit_callback** %4, align 8
  %31 = getelementptr inbounds %struct.emit_callback, %struct.emit_callback* %30, i32 0, i32 0
  store i8* %29, i8** %31, align 8
  br label %32

32:                                               ; preds = %26, %25, %14
  ret void
}

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i8* @strtol(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
